# marvis-vault

./: .gitignore  CLI_TEST_INSTRUCTIONS.md  CONTRIBUTING.md  DEMO_README.md  LICENSE.md  README.md  SECURITY.md  SECURITY_ASSESSMENT.md  SETUP.md  TEST_TRUSTSCORE_FIX.md  agent_admin.json  agent_no_trust.json  agent_with_trust.json  audit_log.json  audit_log.jsonl  missing_trust.json  pyproject.toml  requirements.txt  setup.py  test_cli_fix.sh  test_data.json  test_missing_trustscore_direct.py  test_pii.json  test_policy.json  test_trustscore_engine.py  verify_security_is_real.py
.claude/: settings.local.json
dev/: README.md  executive_summary.md  feature_roadmap.md  local_setup_guide.md  security_improvements_summary.md  system_analysis.md  test_trustscore_fallback_summary.md
docs/: 00_quickstart.md  01_cli_interface_.md  01_index.md  01_policy_definition_.md  02_cli_interface_.md  02_policy_definition_.md  02_policy_engine_.md  03_condition_evaluator_.md  03_policy_definition_.md  03_policy_engine_.md  04_condition_evaluator_.md  04_policy_engine_.md  04_redaction_system_.md  05_condition_evaluator_.md  05_redaction_system_.md  05_unmask_mechanism_.md  06_audit_system_.md  06_redaction_system_.md  06_unmask_mechanism_.md  07_audit_system_.md  07_cli_interface_.md  07_unmask_mechanism_.md  08_audit_system_.md  index.md  policy-format.md  quickstart.md  roadmap.md  sdk-usage.md
examples/: README.md  after.json  agent-admin.json  agent-basic.json  agent-low-trust.json  agent.json  before.json  data-medical.json  data-pii-realistic.json  data-pii.json
(+139 files in other folders)
